<resources>
    <string name="app_name">PaletteText</string>
    <string name="made_by_zrf">Made By Zrf</string>
    <string name="open">open</string>
    <string name="textview">TextView</string>
    <string name="close">close</string>
    <string name="左">左</string>
    <string name="右">右</string>
    <string name="开关">开关</string>
    <string name="确定">确定</string>
    <string name="editText">请输入数字</string>
    <string name="nangua">RadioButton</string>
    <string name="ghost">ghost</string>
    <string name="bat">bat</string>
    <string name="imageview1">imageview</string>
    <string name="checkbox1">男</string>
    <string name="checkbox2">女</string>
    <string name="checkbox3">爱吃</string>
    <string name="checkbox4">爱睡</string>
    <string name="checkbox5" >爱玩</string>
    <string name="Yes">yes</string>
    <string name="No">no</string>
</resources>
